--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
         "start:dev": "NODE_ENV=development nodemon server.js",
-        "start:prod": "NODE_ENV=production nodemon server.js"
+        "start:prod": "NODE_ENV=production nodemon server.js",
+        "test": "NODE_ENV=testing nodemon server.js"
     },
     "author": "Mudassir Quraishi",
     "license": "MIT",
